# VulkanBlackHole

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.cpp  app.hpp  constants.hpp  main.cpp
docs/latex/: main.tex  references.bib
docs/latex/include/: preambule.tex  title.tex
docs/latex/parts/: Annotation.tex  Appendix1.tex  Appendix2.tex  Chapter0.tex  Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex
my_vulkan/: gpu_allocator.cpp  gpu_allocator.hpp  utils.cpp  utils.hpp  vulkan_controller.cpp  vulkan_controller.hpp  vulkan_functions.cpp  vulkan_functions.hpp  window.cpp  window.hpp
my_vulkan/core/: core.cpp  core.hpp
my_vulkan/core/passes/: base_pass.hpp
my_vulkan/core/passes/black_hole/: black_hole_pass.cpp  black_hole_pass.hpp  black_hole_precompute_pass.cpp  black_hole_precompute_pass.hpp  common.hpp  obj_transformation_matrices.hpp
my_vulkan/shaders/: black_dihole.comp  black_dihole_rk.glsl  black_hole.comp  black_hole.in  black_hole_common.comp  black_hole_precompute_accr_disk_data_texture.comp  black_hole_precompute_phi_texture.comp  black_hole_precompute_precomputed_texture.comp  black_hole_precomputed.comp  black_hole_ray_marching.comp  black_hole_ray_marching_rk1.comp  black_hole_ray_marching_rk2.comp  black_hole_ray_marching_rk4.comp  black_hole_ray_query.comp  black_hole_runge_kutte.glsl  compile_shaders.py  shaders_list.cpp  shaders_list.hpp
my_vulkan/shaders/spv/: black_dihole.comp.spv  black_hole.comp.spv  black_hole_precompute_accr_disk_data_texture.comp.spv  black_hole_precompute_phi_texture.comp.spv  black_hole_precompute_precomputed_texture.comp.spv  black_hole_precomputed.comp.spv  black_hole_ray_marching.comp.spv  black_hole_ray_marching_rk1.comp.spv  black_hole_ray_marching_rk2.comp.spv  black_hole_ray_marching_rk4.comp.spv  black_hole_ray_query.comp.spv
my_vulkan/vulkan_functions/: device.in  global.in  instance.hpp  instance.in
utils/: camera.cpp  camera.hpp  clock.cpp  clock.hpp  fps_counter.cpp  fps_counter.hpp  obj_data.cpp  obj_data.hpp  window.cpp  window.hpp
